azuredeploy-nonNested.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]"
        },
        "signer_nodes_Count": {
            "type": "int",
            "defaultValue": 2
        },
        "adminUsername": {
            "type": "string",
            "defaultValue": "ashuser"
        },
        "adminPassword": {
            "type": "string",
            "defaultValue": "Ashpassword123"
        },
        "objectId": {
            "type": "string",
            "defaultValue": "fd6c1923-5ea7-4b77-ae32-eca1a5445f9a"
        }
    },
    "variables": {
        "prefix": "Chain",
        "suffix": "[substring(uniqueString(resourceGroup().id) ,0, 5)]",
        "availabilitySetsName": "[concat(variables('prefix'),'-avset')]",
        "virtualNetworksName": "[concat(variables('prefix'),'-vnet')]",
        "chainSignerVMIpName": "[concat(variables('prefix'),'-signer-pip')]",
        "chainGeneratorLbIpName": "[concat(variables('prefix'),'-lb-pip')]",
        "chainGeneratorNicName": "[concat(variables('prefix'),'-nic')]",
        "chainSignerNicName": "[concat(variables('prefix'),'-signer-nic')]",
        "chainGeneratorNsgName": "[concat(variables('prefix'),'-nsg')]",
        "chainSignerNsgName": "[concat(variables('prefix'),'-signer-nsg')]",
        "chainGeneratorVmName": "[concat(variables('prefix'),'-gen-vm')]",
        "chainSignerVmName": "[concat(variables('prefix'),'-signer-vm')]",
        "chainLoadBalancerName": "[concat(variables('prefix'),'-lb')]",
        "lbid": "[resourceId('Microsoft.Network/loadBalancers',variables('chainLoadBalancerName'))]",
        "lbIpConfigId": "[concat(variables('lbid'),'/frontendIPConfigurations/LoadBalancerFrontEnd')]",
        "lbBkpoolId": "[concat(variables('lbid'),'/backendAddressPools/lb-bkpool')]",
        "lbwebProbeId": "[concat(variables('lbid'),'/probes/web-port')]",
        "lbhttpProbeId": "[concat(variables('lbid'),'/probes/http')]",
        "lbhttpsProbeId": "[concat(variables('lbid'),'/probes/https')]",
        "generatorSubnetName": "gen-subnet",
        "signerSubnetName": "signer-subnet",
        "lbPipDns": "[concat('chain-gen-',variables('suffix'))]",
        "keyVaultName": "[concat(variables('prefix'),'-',variables('suffix'),'-kvlt')]",
        "tenantId": "[subscription().tenantId]",
        "signerScript1Url": "",
        "signerScript1FileName": "",
        "generatorScriptUrl": "",
        "generatorScriptFileName": "",
        "signerScriptUrl2": "",
        "signerScript2FileName": ""
    },
    "resources": [
        {
            "type": "Microsoft.Compute/availabilitySets",
            "sku": {
                "name": "Aligned"
            },
            "name": "[variables('availabilitySetsName')]",
            "apiVersion": "2016-04-30-preview",
            "location": "[parameters('location')]",
            "tags": {},
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines": []
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('chainGeneratorVmName')]",
            "apiVersion": "2016-04-30-preview",
            "location": "[parameters('location')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(variables('chainGeneratorVmName'),'-',variables('prefix'),'-osDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('chainGeneratorVmName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('chainGeneratorNicName'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('chainGeneratorNicName'))]"
            ],
            "resources": [
                {
                    "type": "extensions",
                    "name": "DockerExtension",
                    "apiVersion": "2015-05-01-preview",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[concat('Microsoft.Compute/virtualMachines/', variables('chainGeneratorVmName'))]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "DockerExtension",
                        "typeHandlerVersion": "1.1",
                        "autoUpgradeMinorVersion": true,
                        "settings": {},
                        "protectedSettings": {}
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(variables('chainSignerVmName'),'-',copyIndex(1))]",
            "apiVersion": "2016-04-30-preview",
            "location": "[parameters('location')]",
            "copy": {
                "name": "signerLoop",
                "count": "[parameters('signer_nodes_Count')]"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('availabilitySetsName'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(variables('chainSignerVmName'),'-',copyIndex(1),'-',variables('prefix'),'-osDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[concat(variables('chainSignerVmName'),'-',copyIndex(1))]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('chainSignerNicName'),'-',copyIndex(1)))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('chainSignerNicName'),'-',copyIndex(1)))]"
            ],
            "resources": [
                {
                    "type": "extensions",
                    "name": "DockerExtension",
                    "apiVersion": "2015-05-01-preview",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[concat('Microsoft.Compute/virtualMachines/', variables('chainSignerVmName'),'-',copyIndex(1))]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "DockerExtension",
                        "typeHandlerVersion": "1.1",
                        "autoUpgradeMinorVersion": true,
                        "settings": {},
                        "protectedSettings": {}
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "name": "[variables('chainLoadBalancerName')]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('chainGeneratorLbIpName'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "lb-bkpool"
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "web-console",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('lbIpConfigId')]"
                            },
                            "frontendPort": 1999,
                            "backendPort": 1999,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[variables('lbBkpoolId')]"
                            },
                            "probe": {
                                "id": "[variables('lbwebProbeId')]"
                            }
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('lbIpConfigId')]"
                            },
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[variables('lbBkpoolId')]"
                            },
                            "probe": {
                                "id": "[variables('lbhttpsProbeId')]"
                            }
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('lbIpConfigId')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[variables('lbBkpoolId')]"
                            },
                            "probe": {
                                "id": "[variables('lbhttpProbeId')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "web-port",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 1999,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "protocol": "Http",
                            "port": 80,
                            "requestPath": "/",
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 443,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('lbIpConfigId')]"
                            },
                            "frontendPort": 22,
                            "backendPort": 22,
                            "protocol": "Tcp"
                        }
                    }
                ],
                "outboundNatRules": [],
                "inboundNatPools": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('chainGeneratorLbIpName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('chainGeneratorNicName')]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworksName')), '/subnets/', variables('generatorSubnetName'))]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('chainLoadBalancerName')), '/backendAddressPools/lb-bkpool')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('chainLoadBalancerName')), '/inboundNatRules/ssh')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('chainGeneratorNsgName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworksName'))]",
                "[resourceId('Microsoft.Network/loadBalancers', variables('chainLoadBalancerName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('chainGeneratorNsgName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('chainSignerNicName'),'-',copyIndex(1))]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "copy": {
                "name": "signerLoop",
                "count": "[parameters('signer_nodes_Count')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('chainSignerVMIpName'),'-',copyIndex(1)))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworksName')), '/subnets/',variables('signerSubnetName'))]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('chainSignerNsgName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('chainSignerVMIpName'),'-',copyIndex(1)))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworksName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('chainSignerNsgName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('chainGeneratorNsgName')]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "web",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1999",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1011,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1021,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('chainSignerNsgName')]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "container-1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1999",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1011,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1021,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('chainGeneratorLbIpName')]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('lbPipDns')]"
                }
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(variables('chainSignerVMIpName'),'-',copyIndex(1))]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "copy": {
                "name": "signerLoop",
                "count": "[parameters('signer_nodes_Count')]"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworksName')]",
            "apiVersion": "2016-03-30",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('generatorSubnetName')]",
                        "properties": {
                            "addressPrefix": "10.1.0.0/24"
                        }
                    },
                    {
                        "name": "[variables('signerSubnetName')]",
                        "properties": {
                            "addressPrefix": "10.1.1.0/24"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "name": "[variables('keyVaultName')]",
            "type": "Microsoft.KeyVault/vaults",
            "apiVersion": "2015-06-01",
            "location": "[parameters('location')]",
            "tags": {},
            "properties": {
                "tenantId": "[variables('tenantId')]",
                "sku": {
                    "family": "A",
                    "name": "Standard"
                },
                "accessPolicies": [
                    {
                        "objectId": "[parameters('objectId')]",
                        "tenantId": "[variables('tenantId')]",
                        "permissions": {
                            "keys": [
                                "All"
                            ],
                            "secrets": [
                                "All"
                            ]
                        }
                    }
                ],
                "enabledForDeployment": true,
                "enabledForDiskEncryption": false,
                "enabledForTemplateDeployment": true
            }
        }
    ]
}
